react-bootstrap: implement focus ring when focused

--- a/packages/react-bootstrap/scss/style.scss
+++ b/packages/react-bootstrap/scss/style.scss
@@ -1,3 +1,14 @@
+.selectoroid-control {
+  .selectoroid-static {
+    cursor: default;
+
+    &.focus-ring {
+      box-shadow: var(--bs-focus-ring-x, 0) var(--bs-focus-ring-y, 0) var(--bs-focus-ring-blur, 0)
+        var(--bs-focus-ring-width) var(--bs-focus-ring-color);
+    }
+  }
+}
+
 .selectoroid {
   width: 100%;
   height: 25em;
