--- a/storybook/src/stories/react-bootstrap/style.scss
+++ b/storybook/src/stories/react-bootstrap/style.scss
@@ -1,2 +1,2 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css";
-@import "../../../packages/react-bootstrap/scss/style";
+@import "../../../../packages/react-bootstrap/scss/style";
