--- a/.storybook/stories/react-bootstrap/style.scss
+++ b/.storybook/stories/react-bootstrap/style.scss
@@ -1,2 +1,9 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css";
 @import "../../../packages/react-bootstrap/scss/style";
+@import "../../../node_modules/@taglicious/react-bootstrap/dist/style.css";
+
+.selectoroid-picker-popover {
+  $width: 35rem;
+  width: $width;
+  max-width: $width;
+}
