--- a/packages/react-bootstrap/scss/style.scss
+++ b/packages/react-bootstrap/scss/style.scss
@@ -22,7 +22,11 @@
 
     &:not(:last-child) {
       border-right: 1px solid var(--bs-border-color);
-      margin-right: 1em;
+      padding-right: 1em;
+    }
+
+    &:not(:first-child) {
+      padding-left: 1em;
     }
 
     .selectoroid-listgroup-wrapper {
